# PSD-Thumbnails

./: .gitignore  Build.ps1  BuildAll.ps1  CMakeLists.txt  LICENSE  README.md
include/: ClassFactory.h  PSDParser.h  PSDThumbnailProvider.h
installer/: BuildInstaller.ps1  LICENSE.txt  setup.iss
src/: ClassFactory.cpp  DllMain.cpp  PSDParser.cpp  PSDThumbnailProvider.cpp  PSDThumbnailProvider.def
